<resources>
    <string name="app_name">GelKurye</string>
    <string name="onboard_skip">Atla</string>
    <string name="onboard_header_1">Anlık Sipariş Çekme</string>
    <string name="onboard_spec_1">Trendyol, Getir ve YemekSepeti siparişlerinizi anlık olarak takip ediyoruz.</string>
    <string name="onboard_header_2">Otomatik Kurye Yönlendirme</string>
    <string name="onboard_spec_2">Siparişiniz sisteme düştüğü gibi işletmenize kuryelerimizden birini yönlendiriyoruz.</string>
    <string name="onboard_header_3">Hızlı Teslimat</string>
    <string name="onboard_spec_3">Kısa süre içerisinde siparişi teslim ediyoruz.</string>
    <string name="selection_header">GelKurye Size Bir Adım Kadar Yakın</string>
    <string name="selection_spec">GelKurye uygulamamızda bir tıklama ile kuryemiz hemen kapınızda. Hemen kayıt olup ayrıcalıklardan yararlanın…</string>
    <string name="button_login">Giriş Yap</string>
    <string name="button_register">Kayıt Ol</string>
    <string name="button_register_merchant">Restaurant Kaydı</string>
    <string name="button_next">İleri</string>
    <string name="button_confirm">Onayla</string>
    <string name="button_reset">Sıfırla</string>
    <string name="button_yes">Evet</string>
    <string name="button_no">Hayır</string>
    <string name="hint_star">*</string>
    <string name="hint_username">Kullanıcı Adı</string>
    <string name="hint_password">Şifre</string>
    <string name="hint_rememberme">Beni Hatırla</string>
    <string name="hint_forgetpass">Şifremi Unuttum ?</string>
    <string name="hint_namesurname">İsim Soyisim</string>
    <string name="hint_mail">E-Posta Adresi</string>
    <string name="hint_phone">Telefon Numarası</string>
    <string name="hint_pass_repeat">Şifreyi Tekrar Giriniz</string>
    <string name="hint_address">Adres</string>
    <string name="hint_relative_name_surname">Yakınınız</string>
    <string name="hint_relative_phone_number">Yakınınızın Telefon Numarası</string>
    <string name="hint_merchant_name">İşletme Adı</string>
    <string name="hint_merchant_addres">İşletme Adresi</string>
    <string name="hint_merchant_contact_number">İşletme Telefon Numarası</string>
    <string name="license_front">Ehliyet Ön Yüz</string>
    <string name="license_back">Ehliyet Arka Yüz</string>
    <string name="navbar_home">Anasayfa</string>
    <string name="navbar_orders">Siparişler</string>
    <string name="navbar_profile">Profil</string>
    <string name="navbar_settings">Ayarlar</string>
    <string name="navbar_support">Destek</string>
    <string name="navbar_logout">Çıkış Yap</string>
    <string name="navbar_button_dashboard">Dashboard</string>
    <string name="navbar_button_earning">Kazanç</string>
    <string name="developer" translatable="false">Halil İbrahim Direktör</string>
    <string name="developer_mail" translatable="false">hidirektor@gmail.com</string>
    <string name="developer_merchant_name" translatable="false">Komagene</string>
    <string name="developer_merchant_address" translatable="false">Kuşadası / Aydın</string>
    <string name="welcome">Merhabalar</string>
    <string name="current_order">Şuanki Sipariş</string>
    <string name="waiting_orders">Bekleyen Siparişler</string>
    <string name="all_orders">Tüm Siparişler</string>
    <string name="active">Aktif Siparişler</string>
    <string name="delivered">Teslim Edilenler</string>
    <string name="current_taken">Teslim Alındı</string>
    <string name="current_on_way">Yolda</string>
    <string name="current_delivered">Teslim Edildi</string>
    <string name="accept">Kabul Et</string>
    <string name="decline">Reddet</string>
    <string name="profile_photo">Profil Fotoğrafı</string>
    <string name="password_forget">Şifremi Unuttum</string>
    <string name="forget_password_spec">Kullanıcı Adı ya da E-Posta Adresiniz</string>
    <string name="profile_edit">Profili Düzenle</string>
    <string name="enter_otp">Onay Kodu Gir</string>
    <string name="enter_otp_spec">Gönderdiğimiz OTP kodunu aşağıya girin.</string>
    <string name="enter_otp_second">Onay Kodunu Giriniz</string>
    <string name="remaining_time">Kalan Süre: </string>
    <string name="seperator">:</string>
    <string name="send_again">Tekrar Gönder</string>
    <string name="password_reset">Şifre Sıfırla</string>
    <string name="reset_success">Şifreniz Başarılı Şekilde Değiştirilmiştir.</string>
    <string name="current_password">Mevcut Şifreniz</string>
    <string name="change_pass">Şifreni Değiştir</string>
    <string name="faq">S.S.S.</string>
    <string name="faq_spec">Sıkça Sorulan Sorular</string>
    <string name="faq_q1">Siparişi teslim ederken onay kodu alacak mıyız?</string>
    <string name="faq_a1">Evet siparişi üzerinize aldığınız anda müşteriye bir OTP kodu gönderiyoruz. Sizler de siparişi müşteriye götürdüğünüz an müşteriden bu 6 haneli kodu alıp uygulama ekranından girip sipariş teslimini o şekilde gerçekleştirmelisiniz.</string>
    <string name="faq_q2">Ödemeler ne zaman hesabımıza yatacak?</string>
    <string name="faq_a2">Kuryelerimize ödemeleri otomatik olarak yapılmaktadır. Ödemeler haftanın 1. günü yapılmaktadır.</string>
    <string name="faq_q3">Uygulama neden sürekli olarak konumumu takip ediyor?</string>
    <string name="faq_a3">Uygulama sipariş takibi açısından hassaslık sağlayabilmek için sürekli olarak konumunuzu takip eder.</string>
    <string name="faq_q4">Paket istatistiklerim güncelleniyor mu?</string>
    <string name="faq_a4">Evet, her teslimat sonrasında istatistikleriniz güncellenir.</string>
    <string name="faq_merchant_q1">Yemek Sepeti için neden kullanıcı adı ve şifremi vermek zorundayım?</string>
    <string name="faq_merchant_a1">Yemek Sepeti politikaları gereği yemek sepetinde ki siparişlerinizi çekebilmemiz için yemek sepeti kullanıcı adı ve şifrenizi sizlerden alıp yemek sepetinden "Token" üretmek zorundayız. Veri saklama politikalarımız doğrultusunda bizlerle paylaştığınız hiçbir bilgi 3. parti hiçbir kişiyle paylaşılmamaktadır.</string>
    <string name="faq_merchant_q2">"Kazanç" ekranında ki veriler eş zamanlı olarak mı güncelleniyor?</string>
    <string name="faq_merchant_a2">Evet. Kazanç ekranında ki verileriniz eş zamanlı olarak gelen siparişleriniz doğrultusunda hesaplanarak üretilir. Böylece işletmenizin güncel kazanç tablosuna istediğiniz zaman ulaşabilirsiniz.</string>
    <string name="faq_merchant_q3">Siparişler ne sıklıkla pazaryerlerinden çekiliyor?</string>
    <string name="faq_merchant_a3">Pazaryerlerinde ki hesaplarınıza düşen siparişleriniz için birer dakika arayla kontrol yapıyoruz. Böylece hiçbir sipariş gözden kaçmıyor ve kuryelerimize atanıyor.</string>
    <string name="faq_merchant_q4">Sipariş durumunu otomatik güncelliyor musunuz?</string>
    <string name="faq_merchant_a4">Evet sipariş durumları da kuryelerin eylemlerine (siparişi kabul etme, siparişi teslim etme) göre pazaryerlerinde otomatik olarak güncelleniyor.</string>
    <string name="stats_completed">Teslim Edilen Paket</string>
    <string name="stats_pending">Bekleyen Sipariş</string>
    <string name="stats_total">Toplam Sipariş</string>
    <string name="stats_total_earning">Toplam Kazanç</string>
    <string name="stats_cancelled">Sipariş İptal Edildi</string>
    <string name="shift">Vardiya</string>
    <string name="night_mode">Koyu Tema</string>
    <string name="language">Dil Değiştir</string>
    <string name="contact_us">Bize Ulaşın</string>
    <string name="earning_transactions">Yapılan İşlemler</string>
    <string name="earning_balance">Toplam Bakiye</string>
    <string name="earning_withdraw">Hesaba Aktar</string>
    <string name="lang_turkish_1" translatable="false">Türkçe</string>
    <string name="lang_turkish_2" translatable="false">Turkish</string>
    <string name="lang_english_1" translatable="false">English (United States)</string>
    <string name="lang_english_2" translatable="false">English (United States)</string>
    <string name="sos_button">Yardım</string>
    <string name="register_fragment_auth">Hesap\nBilgileri</string>
    <string name="register_fragment_personal">Kişisel\nBilgiler</string>
    <string name="register_fragment_relative">Yakınınız</string>
    <string name="register_fragment_license">Yasal</string>
    <string name="register_fragment_merchant">İşletme</string>
    <string name="map_text_origin">Restaurant</string>
    <string name="map_text_destination">Siz</string>
    <string name="map_text_courier">Kurye</string>
    <string name="merchant_marketplace">Pazaryeri</string>
    <string name="merchant_marketplace_trendyol" translatable="false">Trendyol</string>
    <string name="merchant_marketplace_getiryemek" translatable="false">Getir Yemek</string>
    <string name="merchant_marketplace_yemeksepeti" translatable="false">Yemek Sepeti</string>
    <string name="merchant_setup_trendyol">Trendyol Eşle</string>
    <string name="merchant_setup_getiryemek">GetirYemek Eşle</string>
    <string name="merchant_setup_yemeksepeti">YemekSepeti Eşle</string>
    <string name="merchant_setup_trendyol2">Trendyol Info</string>
    <string name="merchant_setup_trendyol3">Supplier Id</string>
    <string name="merchant_setup_trendyol4">API Key</string>
    <string name="merchant_setup_trendyol5">Secret Key</string>
    <string name="merchant_setup_getiryemek2">GetirYemek Info</string>
    <string name="merchant_setup_getiryemek3">Token</string>
    <string name="merchant_setup_yemeksepeti2">YemekSepeti Info</string>
    <string name="merchant_setup_yemeksepeti3">Username</string>
    <string name="merchant_setup_yemeksepeti4">Password</string>
    <string name="merchant_synch">Hesabı Eşle</string>
    <string name="merchant_setup_steps_trendyol">Trendyol Bilgilerini Nasıl Bulacağım ?</string>
    <string name="merchant_setup_steps_getiryemek">GetirYemek Bilgilerini Nasıl Bulacağım ?</string>
    <string name="merchant_setup_steps_yemeksepeti">YemekSepeti Bilgilerini Nasıl Bulacağım ?</string>
    <string name="permission_location_header">Konum İzni</string>
    <string name="permission_location_desc">Sipariş teslimi sırasında haritayı görmek için, GelKuryenin konumunuzu her zaman kullanmasına izin verin.</string>
    <string name="permission_location_desc2">GelKurye, arka planda konumu kullanarak kuryeye en kısa yolu haritada gösterecektir.</string>
    <string name="permission_location_button_authorize">İzin Ver</string>
    <string name="permission_location_button_deny">Reddet</string>
    <string name="country_error">Şuan sadece Türkiyeye hizmet veriyoruz.</string>
    <string name="check_icon" translatable="false">&#xf00c;</string>
    <string name="find_api_trendyol">Trendyoldan API bilgilerini alabilmeniz için bu pazaryerinde bir mağaza açmanız yeterli. Trendyol mağazanız açıldıktan sonra, “Hesap Bilgilerim” kısmında "Entegrasyon Bilgileri" sekmesine girmeniz gerekiyor. Buraya girdikten sonra, satıcı IDnizi, API Key ve API Secret bilgilerinizi alabilirsiniz.</string>
    <string name="find_api_getiryemek">Öncelikle getir yönetim panelinde bulunan POS Entegrasyonu sekmesine girin. Daha sonra POS Firması seçme bölümünden GoPOS’u seçin ve Oluştur butonuna basın. POS Restoran Secret Key kısmında restoranınıza ait apikey bilgisi oluşacaktır.</string>
    <string name="find_api_yemeksepeti">Yemek Sepeti hesabınızla uygulamamızı eşleyebilmeniz için bizlere yemek sepetine giriş yaparken kullandığınız "Kullanıcı Adı" ve "Şifre" bilgilerinizi vermelisiniz. Bunun sebebi S.S.S. ekranımızda da açıkladığımız gibi Yemek Sepeti protokolleridir.</string>
    <string name="exit_title">Çıkış Yap</string>
    <string name="exit_description">Çıkış yapmak istediğinize emin misiniz?</string>
</resources>