<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/closeLanguagePopup"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/close_ikon"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/outfit_medium"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_dialog"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_turkish_1"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/outfit"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_turkish_2"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:fontFamily="@font/outfit_medium"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"/>
                </LinearLayout>
                <RadioButton
                    android:id="@+id/turkishButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.9"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_english_1"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:fontFamily="@font/outfit"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lang_english_2"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:fontFamily="@font/outfit_medium"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"/>
                </LinearLayout>
                <RadioButton
                    android:id="@+id/englishButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:buttonTint="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>