<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Screens.MainActivity"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/selection_ikon"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/password_reset_4_ikon"
                app:layout_constraintHorizontal_bias=".5"
                app:layout_constraintVertical_bias=".2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/mainText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_reset"
                android:fontFamily="@font/outfit_extrabold"
                android:textColor="@color/headerTextColor"
                android:textSize="32sp"
                android:textStyle="bold"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selection_ikon" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPasswordLabel"
                    android:text="@string/hint_password"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/editTextTopColor"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPasswordStarLabel"
                    android:text="@string/hint_star"
                    android:layout_toEndOf="@id/textViewPasswordLabel"
                    android:fontFamily="@font/gilroy_semibold"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/editTextStarColor"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_below="@id/textViewPasswordLabel"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/password_show_ikon"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="@color/editTextColor" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPasswordRepeatLabel"
                    android:text="@string/hint_pass_repeat"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/editTextTopColor"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewPasswordRepeatStarLabel"
                    android:text="@string/hint_star"
                    android:layout_toEndOf="@id/textViewPasswordRepeatLabel"
                    android:fontFamily="@font/gilroy_semibold"
                    android:layout_marginStart="2dp"
                    android:textColor="@color/editTextStarColor"
                    android:layout_marginTop="10dp"/>
                <EditText
                    android:id="@+id/editTextPasswordRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_below="@id/textViewPasswordRepeatLabel"
                    android:background="@drawable/edittextbackground"
                    android:drawableEnd="@drawable/password_show_ikon"
                    android:ems="10"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/hint_pass_repeat"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textColorHint="@color/editTextColor" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/loginbutton"
        android:fontFamily="@font/outfit_bold"
        android:padding="16dp"
        android:text="@string/button_reset"
        android:textColor="#ffffff"
        android:textSize="26sp"
        android:textAllCaps="false"
        android:shadowColor="#FF5722"
        android:shadowDx="8"
        android:shadowDy="10"
        android:shadowRadius="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
