<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/relativeNameSurnameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_relative_name_surname"
                android:fontFamily="@font/poppins"
                android:textColor="@color/editTextTopColor"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_star"
                android:layout_toEndOf="@id/relativeNameSurnameTextView"
                android:fontFamily="@font/gilroy_semibold"
                android:layout_marginStart="2dp"
                android:textColor="@color/editTextStarColor"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/relativeNameSurnameEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@id/relativeNameSurnameTextView"
                android:background="@drawable/edittextbackground"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/hint_relative_name_surname"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@color/editTextColor" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/relativePhoneNumberTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_relative_phone_number"
                android:fontFamily="@font/poppins"
                android:textColor="@color/editTextTopColor"
                android:layout_marginStart="32dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_star"
                android:layout_toEndOf="@id/relativePhoneNumberTextView"
                android:fontFamily="@font/gilroy_semibold"
                android:layout_marginStart="2dp"
                android:textColor="@color/editTextStarColor"
                android:layout_marginTop="10dp"/>
            <EditText
                android:id="@+id/relativePhoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_below="@id/relativePhoneNumberTextView"
                android:background="@drawable/edittextbackground"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/poppins"
                android:hint="@string/hint_relative_phone_number"
                android:inputType="phone"
                android:padding="8dp"
                android:textColorHint="@color/editTextColor" />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>